@@ -16,6 +16,11 @@ tree (maybe).
 
 Version 1.3.14 (In progress)
 ============================
+06/19/2002: ljohnson (Lyle Johnson)
+            [Ruby] Fixed a bug for the '-feature' command line argument;
+            that setting was effectively being ignored and so the feature
+            name was always set equal to the module name.
+
 06/17/2002: beazley
             Fixed problems with static members and enums in templates.
 
